--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,21 +17,21 @@
         android:theme="@style/Theme.AngkringanMbahSingo2"
         tools:targetApi="31">
         <activity
-            android:name=".Interfaces.InterfaceHome"
+            android:name=".Fragments.InterfaceHomeFragment"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".Interfaces.InterfaceMinuman"
+            android:name=".Fragments.InterfaceMinumanFragment"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".Interfaces.InterfaceMakanan"
+            android:name=".Fragments.InterfaceMakananFragment"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
